--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse-483546841\testng-customsuite.xml</span>
+                    <span>C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse-1650279088\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="allPages.Tickets" class="method navigator-link" hash-for-method="TC02">TC02</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="allPages.CustomerIssues" class="method navigator-link" hash-for-method="TC01">TC01</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">allPages.Tickets</span>
+              <span class="class-name">allPages.CustomerIssues</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC02">
-                  </a> <!-- TC02 -->
-                  <span class="method-name">TC02</span>
+                  <a name="TC01">
+                  </a> <!-- TC01 -->
+                  <span class="method-name">TC01</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse-483546841\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse-1650279088\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;allPages.Tickets&quot;&gt;
+      &lt;class name=&quot;allPages.CustomerIssues&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC02&quot;/&gt;
+          &lt;include name=&quot;TC01&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- allPages.Tickets --&gt;
+      &lt;/class&gt; &lt;!-- allPages.CustomerIssues --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC02')
-data.setCell(0, 2, 'allPages.Tickets')
-data.setCell(0, 3, 3583);
+data.setCell(0, 1, 'TC01')
+data.setCell(0, 2, 'allPages.CustomerIssues')
+data.setCell(0, 3, 14190);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,39 +213,35 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">14 ignored methods</span>
+            <span class="header-content">12 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">allPages.Tickets</span>
+              <span class="ignored-class-name">allPages.CustomerIssues</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TicketsClick</span>
+                <span class="ignored-method-name">TC03</span>
                 <br/>
-                <span class="ignored-method-name">TC05</span>
-                <br/>
-                <span class="ignored-method-name">TC06</span>
-                <br/>
-                <span class="ignored-method-name">TC07</span>
-                <br/>
-                <span class="ignored-method-name">TC08</span>
-                <br/>
-                <span class="ignored-method-name">TC09</span>
+                <span class="ignored-method-name">LoginBtn</span>
                 <br/>
                 <span class="ignored-method-name">TC10</span>
                 <br/>
-                <span class="ignored-method-name">TC11</span>
+                <span class="ignored-method-name">TC06</span>
                 <br/>
-                <span class="ignored-method-name">TC01</span>
+                <span class="ignored-method-name">TC17</span>
                 <br/>
-                <span class="ignored-method-name">TC12</span>
+                <span class="ignored-method-name">TC27</span>
                 <br/>
-                <span class="ignored-method-name">TC13</span>
+                <span class="ignored-method-name">TC40</span>
                 <br/>
-                <span class="ignored-method-name">TC14</span>
+                <span class="ignored-method-name">TC45</span>
                 <br/>
-                <span class="ignored-method-name">TC03</span>
+                <span class="ignored-method-name">TC02</span>
                 <br/>
-                <span class="ignored-method-name">TC04</span>
+                <span class="ignored-method-name">TC23</span>
+                <br/>
+                <span class="ignored-method-name">TC18</span>
+                <br/>
+                <span class="ignored-method-name">TC19</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -257,23 +253,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">allPages.Tickets</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">allPages.CustomerIssues</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launch</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">8 ms</span>
+                <span class="method-start">6 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TC02</span>
-                <span class="method-start">2010 ms</span>
+                <span class="method-name">TC01</span>
+                <span class="method-start">3822 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">5595 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
