--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse-1650279088\testng-customsuite.xml</span>
+                    <span>C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse--712767644\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="allPages.CustomerIssues" class="method navigator-link" hash-for-method="TC01">TC01</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="allPages.CustomerIssues" class="method navigator-link" hash-for-method="ACHMailTimeChckS2Sale">ACHMailTimeChckS2Sale</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="TC01">
-                  </a> <!-- TC01 -->
-                  <span class="method-name">TC01</span>
+                  <a name="ACHMailTimeChckS2Sale">
+                  </a> <!-- ACHMailTimeChckS2Sale -->
+                  <span class="method-name">ACHMailTimeChckS2Sale</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse-1650279088\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse--712767644\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;allPages.CustomerIssues&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;TC01&quot;/&gt;
+          &lt;include name=&quot;ACHMailTimeChckS2Sale&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- allPages.CustomerIssues --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'TC01')
+data.setCell(0, 1, 'ACHMailTimeChckS2Sale')
 data.setCell(0, 2, 'allPages.CustomerIssues')
-data.setCell(0, 3, 14190);
+data.setCell(0, 3, 23955);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 14 seconds</span>
+              <span class="suite-total-time">Total running time: 23 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,35 +213,93 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">12 ignored methods</span>
+            <span class="header-content">41 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">allPages.CustomerIssues</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TC03</span>
+                <span class="ignored-method-name">ACHMailTimeChckS2Cus</span>
                 <br/>
-                <span class="ignored-method-name">LoginBtn</span>
+                <span class="ignored-method-name">EdtPyCusNameChck</span>
+                <br/>
+                <span class="ignored-method-name">DisableChck2</span>
+                <br/>
+                <span class="ignored-method-name">LastModifiedChck</span>
                 <br/>
                 <span class="ignored-method-name">TC10</span>
                 <br/>
-                <span class="ignored-method-name">TC06</span>
+                <span class="ignored-method-name">DsblUsrChck</span>
                 <br/>
-                <span class="ignored-method-name">TC17</span>
+                <span class="ignored-method-name">InvstClrBtnChck</span>
                 <br/>
-                <span class="ignored-method-name">TC27</span>
+                <span class="ignored-method-name">CrtInvNoDataChck</span>
+                <br/>
+                <span class="ignored-method-name">AddToLstChckPymtChck</span>
                 <br/>
                 <span class="ignored-method-name">TC40</span>
                 <br/>
-                <span class="ignored-method-name">TC45</span>
-                <br/>
                 <span class="ignored-method-name">TC02</span>
-                <br/>
-                <span class="ignored-method-name">TC23</span>
                 <br/>
                 <span class="ignored-method-name">TC18</span>
                 <br/>
+                <span class="ignored-method-name">CGIDrpDwnChck</span>
+                <br/>
+                <span class="ignored-method-name">LoginBtn</span>
+                <br/>
+                <span class="ignored-method-name">TC04</span>
+                <br/>
+                <span class="ignored-method-name">DateCheck</span>
+                <br/>
+                <span class="ignored-method-name">StartPyChck</span>
+                <br/>
+                <span class="ignored-method-name">StopPyMnt</span>
+                <br/>
+                <span class="ignored-method-name">EditInstlrIssue</span>
+                <br/>
+                <span class="ignored-method-name">CusPortEditChck</span>
+                <br/>
+                <span class="ignored-method-name">TC06</span>
+                <br/>
+                <span class="ignored-method-name">EscProgChck</span>
+                <br/>
+                <span class="ignored-method-name">APIStupClrBtn</span>
+                <br/>
+                <span class="ignored-method-name">UserIDCheck</span>
+                <br/>
+                <span class="ignored-method-name">PayOffChck</span>
+                <br/>
+                <span class="ignored-method-name">DisableChck1</span>
+                <br/>
+                <span class="ignored-method-name">NewUsrTimIsue</span>
+                <br/>
+                <span class="ignored-method-name">EmailNotifChck</span>
+                <br/>
+                <span class="ignored-method-name">QuckUpldChck</span>
+                <br/>
+                <span class="ignored-method-name">TC01</span>
+                <br/>
+                <span class="ignored-method-name">TC23</span>
+                <br/>
+                <span class="ignored-method-name">TC45</span>
+                <br/>
                 <span class="ignored-method-name">TC19</span>
+                <br/>
+                <span class="ignored-method-name">ACHUpldPopUpChck</span>
+                <br/>
+                <span class="ignored-method-name">TC03</span>
+                <br/>
+                <span class="ignored-method-name">APIStupSavBtn</span>
+                <br/>
+                <span class="ignored-method-name">EscProgCaptchaChck</span>
+                <br/>
+                <span class="ignored-method-name">TC27</span>
+                <br/>
+                <span class="ignored-method-name">CrtInvDueMonth</span>
+                <br/>
+                <span class="ignored-method-name">TC17</span>
+                <br/>
+                <span class="ignored-method-name">SwapOutChck</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -260,12 +318,16 @@ return data;
               </div> <!-- configuration-method before -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">6 ms</span>
+                <span class="method-start">29 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">TC01</span>
-                <span class="method-start">3822 ms</span>
+                <span class="method-name">ACHMailTimeChckS2Sale</span>
+                <span class="method-start">11398 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">35359 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
