--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse--2101360917\testng-customsuite.xml</span>
+                    <span>C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse-784847400\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,21 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
-                    </span>
-                    <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="allPages.CustomerIssues" class="method navigator-link" hash-for-method="FailedStsChck">FailedStsChck</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content passed suite-Default_suite -->
+                    <span class="method-stats">0 methods,   </span>
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -118,25 +104,10 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">allPages.CustomerIssues</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="FailedStsChck">
-                  </a> <!-- FailedStsChck -->
-                  <span class="method-name">FailedStsChck</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse--2101360917\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\thirumaran\AppData\Local\Temp\testng-eclipse-784847400\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +118,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;allPages.CustomerIssues&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;FailedStsChck&quot;/&gt;
+          &lt;include name=&quot;TotalValueChckInMonitoring&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- allPages.CustomerIssues --&gt;
     &lt;/classes&gt;
@@ -189,16 +160,12 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
-data.setCell(0, 0, 0)
-data.setCell(0, 1, 'FailedStsChck')
-data.setCell(0, 2, 'allPages.CustomerIssues')
-data.setCell(0, 3, 10068);
+data.addRows(0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 0 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,95 +180,101 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">42 ignored methods</span>
+            <span class="header-content">45 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">allPages.CustomerIssues</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">TC18</span>
+                <span class="ignored-method-name">APIStupClrBtn</span>
                 <br/>
-                <span class="ignored-method-name">TC06</span>
+                <span class="ignored-method-name">StopPyMnt</span>
                 <br/>
-                <span class="ignored-method-name">TC02</span>
+                <span class="ignored-method-name">LastModifiedChck</span>
                 <br/>
-                <span class="ignored-method-name">TC04</span>
+                <span class="ignored-method-name">DisableChck2</span>
                 <br/>
-                <span class="ignored-method-name">DateCheck</span>
+                <span class="ignored-method-name">CrtInvDueMonth</span>
                 <br/>
-                <span class="ignored-method-name">StartPyChck</span>
+                <span class="ignored-method-name">ReTrnACHSrchChck</span>
                 <br/>
-                <span class="ignored-method-name">APIStupSavBtn</span>
+                <span class="ignored-method-name">InvstClrBtnChck</span>
                 <br/>
-                <span class="ignored-method-name">ACHUpldPopUpChck</span>
-                <br/>
-                <span class="ignored-method-name">LoginBtn</span>
-                <br/>
-                <span class="ignored-method-name">SwapOutChck</span>
-                <br/>
-                <span class="ignored-method-name">CusPortEditChck</span>
-                <br/>
-                <span class="ignored-method-name">PayOffChck</span>
+                <span class="ignored-method-name">EdtPyCusNameChck</span>
                 <br/>
                 <span class="ignored-method-name">ACHMailTimeChckS2Cus</span>
-                <br/>
-                <span class="ignored-method-name">NewUsrTimIsue</span>
-                <br/>
-                <span class="ignored-method-name">TC10</span>
-                <br/>
-                <span class="ignored-method-name">QuckUpldChck</span>
-                <br/>
-                <span class="ignored-method-name">DsblUsrChck</span>
                 <br/>
                 <span class="ignored-method-name">CrtInvNoDataChck</span>
                 <br/>
                 <span class="ignored-method-name">TC40</span>
                 <br/>
-                <span class="ignored-method-name">TC17</span>
+                <span class="ignored-method-name">DsblUsrChck</span>
                 <br/>
-                <span class="ignored-method-name">TC01</span>
-                <br/>
-                <span class="ignored-method-name">TC45</span>
-                <br/>
-                <span class="ignored-method-name">TC23</span>
-                <br/>
-                <span class="ignored-method-name">TC19</span>
-                <br/>
-                <span class="ignored-method-name">TC03</span>
-                <br/>
-                <span class="ignored-method-name">StopPyMnt</span>
-                <br/>
-                <span class="ignored-method-name">DisableChck2</span>
-                <br/>
-                <span class="ignored-method-name">EditInstlrIssue</span>
-                <br/>
-                <span class="ignored-method-name">EscProgCaptchaChck</span>
-                <br/>
-                <span class="ignored-method-name">CrtInvDueMonth</span>
-                <br/>
-                <span class="ignored-method-name">TC27</span>
-                <br/>
-                <span class="ignored-method-name">APIStupClrBtn</span>
-                <br/>
-                <span class="ignored-method-name">EscProgChck</span>
-                <br/>
-                <span class="ignored-method-name">EdtPyCusNameChck</span>
-                <br/>
-                <span class="ignored-method-name">UserIDCheck</span>
-                <br/>
-                <span class="ignored-method-name">DisableChck1</span>
-                <br/>
-                <span class="ignored-method-name">EmailNotifChck</span>
+                <span class="ignored-method-name">FailedStsChck</span>
                 <br/>
                 <span class="ignored-method-name">ACHMailTimeChckS2Sale</span>
                 <br/>
-                <span class="ignored-method-name">LastModifiedChck</span>
+                <span class="ignored-method-name">TC03</span>
+                <br/>
+                <span class="ignored-method-name">TC45</span>
+                <br/>
+                <span class="ignored-method-name">TC01</span>
+                <br/>
+                <span class="ignored-method-name">TC23</span>
+                <br/>
+                <span class="ignored-method-name">TotalValueChckInMonitoring</span>
+                <br/>
+                <span class="ignored-method-name">TC19</span>
+                <br/>
+                <span class="ignored-method-name">APIStupSavBtn</span>
+                <br/>
+                <span class="ignored-method-name">TC17</span>
+                <br/>
+                <span class="ignored-method-name">TC27</span>
+                <br/>
+                <span class="ignored-method-name">EscProgCaptchaChck</span>
+                <br/>
+                <span class="ignored-method-name">QuckUpldChck</span>
+                <br/>
+                <span class="ignored-method-name">SwapOutChck</span>
+                <br/>
+                <span class="ignored-method-name">CusPortEditChck</span>
+                <br/>
+                <span class="ignored-method-name">DisableChck1</span>
+                <br/>
+                <span class="ignored-method-name">PayOffChck</span>
+                <br/>
+                <span class="ignored-method-name">ACHUpldPopUpChck</span>
+                <br/>
+                <span class="ignored-method-name">EditInstlrIssue</span>
+                <br/>
+                <span class="ignored-method-name">TC10</span>
+                <br/>
+                <span class="ignored-method-name">NewUsrTimIsue</span>
+                <br/>
+                <span class="ignored-method-name">AddToLstChckPymtChck</span>
+                <br/>
+                <span class="ignored-method-name">TC04</span>
+                <br/>
+                <span class="ignored-method-name">LoginBtn</span>
                 <br/>
                 <span class="ignored-method-name">CGIDrpDwnChck</span>
                 <br/>
-                <span class="ignored-method-name">InvstClrBtnChck</span>
+                <span class="ignored-method-name">TC02</span>
                 <br/>
-                <span class="ignored-method-name">AddToLstChckPymtChck</span>
+                <span class="ignored-method-name">EmailNotifChck</span>
+                <br/>
+                <span class="ignored-method-name">EscProgChck</span>
+                <br/>
+                <span class="ignored-method-name">TC18</span>
+                <br/>
+                <span class="ignored-method-name">TC06</span>
+                <br/>
+                <span class="ignored-method-name">DateCheck</span>
+                <br/>
+                <span class="ignored-method-name">StartPyChck</span>
+                <br/>
+                <span class="ignored-method-name">UserIDCheck</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -312,24 +285,6 @@ return data;
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="chronological-class">
-              <div class="chronological-class-name">allPages.CustomerIssues</div> <!-- chronological-class-name -->
-              <div class="configuration-method before">
-                <span class="method-name">launch</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">10 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">FailedStsChck</span>
-                <span class="method-start">3491 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">13562 ms</span>
-              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
